--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,14 @@ video {
   flex: 1 1 0%;
 }
 
+.cursor-default {
+  cursor: default;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -813,6 +821,7 @@ video {
   top: 100%;
   margin-left: auto;
   margin-right: auto;
+  height: 46px;
   width: 10rem;
   --tw-translate-x: -50%;
   --tw-translate-y: -50%;
@@ -828,8 +837,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
   transition-duration: 150ms;
 }
 
@@ -844,6 +851,7 @@ video {
   top: 100%;
   margin-left: auto;
   margin-right: auto;
+  height: 46px;
   width: 10rem;
   --tw-translate-x: -50%;
   --tw-translate-y: -50%;
@@ -859,8 +867,6 @@ video {
   background-color: rgb(199 59 15 / var(--tw-bg-opacity, 1));
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
   transition-duration: 150ms;
 }
 
