--- a/input.css
+++ b/input.css
@@ -7,5 +7,5 @@
 }
 
 .active-cart-btn {
-	@apply border-rose400 bg-red hover:text-red absolute left-1/2 top-full mx-auto h-[46px] w-40 -translate-x-1/2 -translate-y-1/2 items-center justify-between gap-2 rounded-full border px-3 duration-150;
+	@apply border-red bg-red hover:text-red absolute left-1/2 top-full mx-auto h-[46px] w-40 -translate-x-1/2 -translate-y-1/2 items-center justify-between gap-2 rounded-full border px-3 duration-150;
 }
